# Swarm-Robotics-for-real-time-trajectory-following-with-variable-speed

./: CMakeLists.txt  Copy_of_Assignment_2_for_DS_207_2025_(Intro_to_NLP)_Language_Modelling.ipynb  README.md  package.xml
SINGLE_FOLLOWER_CAMERA/: single_follower_inline_camera_orig.launch  singlefollower_red.py  urdf_color_camera_correct
TRI_FORMATION/: follower1_tri_formation.py  follower2_tri_formation.py  tri_formation_launchfile.launch
TWO_FOLLOWER_INLINE/: Leader_follower_2folower_inline.launch  follower1_inline.py  follower2_inline.py
